--- a/webdir/AirHockey.html
+++ b/webdir/AirHockey.html
@@ -7,11 +7,15 @@ Matthew Ngo 2017
 <head>
 	<title>2P Air Hockey Game</title>
 	<link rel="stylesheet" type="text/css" href="AirHockey.css">
-	<script src="AirHockey.js" type="text/javascript"></script>
+	<script src="AirHockeyClient.js" type="text/javascript"></script>
 	<script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
 </head>
 <body>
 	<h1>Air Hockey Game</h1>
+	<button type="button" onclick="alert('Matt likes gochu')">RESET</button>
+	<div class="score1">
+  		<h1 style="color:Red;">0</h1>
+	</div>
 	<div id="p1score"></div>
 	<div id="gamearea">
 			<!--
@@ -22,6 +26,9 @@ Matthew Ngo 2017
 		<div id="ball"></div>
 		<!--<div id="player2"></div>-->
 		<!--</div>-->
+	</div>
+	<div class="score2">
+  		<h1 style="color:Blue;">0</h1>
 	</div>
 	<div id="p2score"></div>
 </body>
